<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/newDespesaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Nova Despesa"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/vencimentoDespesa"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:text=""
        android:hint="Data de vencimento"
        android:onClick="setDate"
        android:textSize="15sp"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp" />



    <EditText
        android:id="@+id/nomeDespesa"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/nomeGasto"
        android:inputType="text"
        android:textSize="15sp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        />

    <EditText
        android:id="@+id/valorDespesa"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/valorDespesa"
        android:inputType="numberDecimal"
        android:textSize="15sp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        />

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/addDespesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ic_launcher_background"
        android:text="@string/add_despesa"
        android:textColor="@android:color/white" />


</LinearLayout>