<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/marketItem"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/marketPhoto"
        app:srcCompat="@drawable/market" />

    <TextView
        android:id="@+id/nomeProduto"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/quantidadeProduto"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/marketItem"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignTop="@+id/marketItem"
        android:text="@string/Produto"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/quantidadeProduto"
        android:layout_alignBottom="@+id/quantidadeProduto"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/marketItem"
        android:layout_toRightOf="@+id/marketItem"
        android:text="@string/Quantidade"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/removeButtomMarket"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/remove" />
</RelativeLayout>