<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guerra.repmanager_aaa.MainActivity"
    android:id="@+id/drawerLayout">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp" />

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#ffffff"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/buttomFinancas"
                    android:layout_width="165dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:onClick="openFinances"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/financeButton"
                    android:scaleType="centerInside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/finances" />

                <ImageButton
                    android:id="@+id/buttomCarona"
                    android:layout_width="177dp"
                    android:layout_height="140dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/caronaButton"
                    android:onClick="openWeb"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttomFinancas"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/carono" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/buttoRep"
                    android:layout_width="177dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/repInfoButton"
                    android:onClick="openRepublicInfo"
                    android:scaleType="centerInside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttomFinancas"
                    app:srcCompat="@drawable/repinfo" />


                <ImageButton
                    android:id="@+id/buttomMarket"
                    android:layout_width="177dp"
                    android:layout_height="140dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/marketButton"
                    android:onClick="openMarket"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttoRep"
                    app:layout_constraintTop_toBottomOf="@+id/buttomCarona"
                    app:srcCompat="@drawable/market" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/buttomTask"
                    android:layout_width="177dp"
                    android:layout_height="140dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/produto"
                    android:onClick="openTasks"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toTopOf="@+id/navigation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttoRep"
                    app:srcCompat="@drawable/task" />

                <ImageButton
                    android:id="@+id/buttomInfo"
                    android:layout_width="177dp"
                    android:layout_height="140dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/appButton"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toTopOf="@+id/navigation"
                    android:onClick="openSobre"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttomTask"
                    app:layout_constraintTop_toBottomOf="@+id/buttomMarket"
                    app:srcCompat="@drawable/repmanager" />

            </TableRow>


        </TableLayout>
        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/navigation" />
    </android.support.constraint.ConstraintLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>



</android.support.v4.widget.DrawerLayout>